Modified index.html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,139 @@
-<p>grace</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Scotland and Family: An Exploration</title>
+  </head>
+  <body>
+    <header>
+      <h1>Scotland and Family: An Exploration</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#introduction">An Introduction</a>
+          </li>
+          <li>
+            <a href="#trip">The Trip</a>
+          </li>
+          <li>
+            <a href="#search">The Search</a>
+          </li>
+          <li>
+            <a href="#alderstocks">The Alderstocks</a>
+          </li>
+          <li>
+            <a href="#cemetery">The Cemetery</a>
+          </li>
+          <li>
+            <a href="#thoughts">Thoughts/Conclusion</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <article>
+        <!-- section: introduction -->
+        <section>
+          <a name="introduction"></a>
+          <h2>An Introduction</h2>
+          <p>This is my dad, John.</p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/turkey.jpg" 		     alt=My father, John Minnis, abroad in Turkey.>
+            <figcaption>My father, John Minnis, abroad in Turkey.</figcaption>
+          </figure>
+          <p>He’s the Atticus to my Scout, and we’ve always been a great team.</p>
+          <p>During my sophomore year of college, I was known as the “stray cat of the MSU    	     theatre department”. Due to some tough circumstances, I spent most of the  	     year couch-surfing between my friends’ houses. Dad knew that was taking a 		     toll on me, so he spent that time secretly fundraising. In May, when I had     	     officially survived the school year, he surprised me with a trip to Europe to 	     cheer me up.</p>
+          <h4>Some things you should know about John Minnis:</h4>
+          <ol>
+            <li>He is obsessed with history - specifically genealogy. Honestly, the people 		that invented Ancestry.com should really just let him run it.</li>
+            <li>He was born with the travel bug, which is apparently hereditary. We are 		both passionate about world history and adventure.</li>
+            <li>He is a gigantic goofball and an even bigger klutz - always getting into 		hilarious predicaments. It's probably from all of the <em>I Love Lucy</em> 		he watches.</li>
+          </ol>
+        </section>
+        <!-- section: h2 The Trip -->
+        <section>
+          <a name="trip"></a>
+          <h2>The Trip</h2>
+          <h4>Our adventure was divided into three phases:</h4>
+          <p><b>Phase 1: Ireland</b></p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/dublin.jpg" 		     alt=Dad discovering his true self in Dublin, Ireland.>
+            <figcaption>Dad discovering his true self in Dublin, Ireland.</figcaption>
+          </figure>
+          <p><b>Phase 2: Scotland</b></p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/faceswap.jpg" 	     alt=Dad and me in Scotland.>
+            <figcaption>Dad and me in Scotland.</figcaption>
+          </figure>
+          <p><b>Phase 3: London</b></p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/london.jpg" 		     alt=Dad and me on the London Bridge.>
+            <figcaption>Dad and me on the London Bridge.</figcaption>
+          </figure>
+          <p>The trip was magical and full of adventure. Spending 10 days exploring new 	     countries with no plan racks up stories, like when my dad pooped his pants 	     while crossing a street in London and had to go without undies for the 		     remainder of the day. Or when we got lost IMMEDIATELY upon arriving in London 	     and it took us three hours to figure out how to get to our AirBnB. <em>Or 		     whatever the sweet heck was going on with this wallpaper:</em></p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/wallpaper.jpg" 		     alt=lizard wallpaper in Northern Ireland.>
+            <figcaption>Weird lizard wallpaper at our B&B in Northern Ireland.</figcaption>
+          </figure>
+          <p>But those are stories for another time. Let's remember Phase Two: Scotland.</p>
+        </section>
+        <!-- section: h2 Finding Strathaven -->
+        <section>
+          <a name="search"></a>
+          <h2>The Search</h2>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/scottishhills.jpg" 		     alt=Scottish hills in Lanarkshire, Scotland.>
+            <figcaption>Scottish hills in Lanarkshire, Scotland.</figcaption>
+          </figure>
+          <p>We landed in Edinburgh on the fourth day with one goal in mind.</p> 
+          <p>You see, when I was growing up we had a hand-drawn picture of the house my 	     Scottish ancestors lived in framed in our house. My dad made it his goal to see 	     that house in person. All he had to go on, though, was a dinky little stick-	     figure map of like three roads put together.
+  
+          <p>After some research, he found out that the house was called the High Alderstocks 	     (which is absolutely insane considering the street I grew up on was Aldergate). 	     Anyway, dad eventually scrounged together some info. We now knew that the house 	     was in Strathaven [STRAY-VEN], Lanarkshire, Scotland, and that the current 	     owners were Dugie and Margaret Turner.</p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/dugie and marge.jpg" 		     alt=Dad (center) with Dugie (left) and Margaret Turner(right).>
+            <figcaption>Dad (center) with Dugie (right) and Margaret Turner (left).</figcaption>
+          </figure>
+        </section>
+        <!-- section: h2 The Alderstocks -->
+        <section>
+          <a name="alderstocks"></a>
+          <h2>The Alderstocks</h2>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/strathaven.jpg" 		     alt=Strathaven, Lanarkshire, Scotland>
+            <figcaption>Strathaven, Lanarkshire, Scotland</figcaption>
+          </figure>
+          <p>We got to the charming little Scottish town of Strathaven, and asked the locals 	     working in the bakery for 1) directions because we didn’t have internet abroad, 	     and 2) shortbread! After three hours of driving (and getting lost) around rainy 	     hills, <b><em>we found it.</b></em></p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/alderstocks.jpg" 		     alt=The Alderstocks>
+            <figcaption>The Alderstocks</figcaption>
+          </figure>
+          <p>Margaret &amp Dugie showed us around, made us tea, and showed us pictures of my 	     great-great-great grandmother Agnes Pate.</p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/agnes.jpg" 		     alt=Agnes Pate with some of her cats>
+            <figcaption>Agnes Pate with some of her cats</figcaption>
+          </figure>
+          <p>Agnes had 16 cats that were all named after tennis players. They told us stories 	     that had circled the locals about our family and told us where to find their 	     graves.</p>
+        </section>
+        <!-- section: h2 The Cemetery -->
+        <section>
+          <a name="cemetery"></a>
+          <h2>The Cemetery</h2>
+          <p>So later, high up on a cemetery hill, we searched for the graves of Peter and 	     Mary Clelland. Unfortunately, all of the graves were so old that over half were 	     no longer decipherable, and the others were broken. So we decided to leave. On 	     the way out, dad stopped to tie his shoe. While he was kneeling, he happened to 	     look at the grave next to him and - I kid you not - saw the word “ALDERSTOCKS”. 	     We could just make out the name Clelland, and my dad started to cry.</p>
+          <figure>
+            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/grave.jpg" 		     alt=The grave of Mary and Peter Clelland>
+            <figcaption>The grave of Mary and Peter Clelland</figcaption>
+          </figure>
+        </section>
+        <!-- section: h2 Thoughts/Conclusion -->
+        <section>
+          <a name="thoughts"></a>
+          <h2>Thoughts/Conclusion</h2>
+          <p>Family history is more than stories. It explains why we are who we are. It tells 	     us where we come from and what our ancestors went through to get us here. My dad 	     taught me that, and I will never forget that historical experience we shared. I 	     hope these memories are passed down to my descendants, and even more, I hope 	     that they cherish them as much as John Minnis would.</p>
+        </section>
+      </article>
+    </main>  
+    <footer>
+      <p>Author: Grace Minnis<br>
+      <a href=mailto:gminnis1696@gmail.com>Forward your shortbread recipes to: 		  	 gminnis1@yahoo.com</a></p>
+    </footer>
+  </body>
+</html>
