Finished html and css styling and added an images folder

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Scotland and Family: An Exploration</title>
+    <title>Roots</title>
+    
+    <link rel=stylesheet href=styles.css>
   </head>
   <body>
     <header>
-      <h1>Scotland and Family: An Exploration</h1>
+      <h1>Roots</h1>
       <nav>
         <ul>
           <li>
@@ -35,11 +37,11 @@
         <section>
           <a name="introduction"></a>
           <h2>An Introduction</h2>
-          <p>This is my dad, John.</p>
           <figure>
             <img src="/Users/Grace/Desktop/lc101/html-me-something/images/turkey.jpg" 		     alt=My father, John Minnis, abroad in Turkey.>
             <figcaption>My father, John Minnis, abroad in Turkey.</figcaption>
           </figure>
+	  <p>This is my dad, John.</p>
           <p>He’s the Atticus to my Scout, and we’ve always been a great team.</p>
           <p>During my sophomore year of college, I was known as the “stray cat of the MSU    	     theatre department”. Due to some tough circumstances, I spent most of the  	     year couch-surfing between my friends’ houses. Dad knew that was taking a 		     toll on me, so he spent that time secretly fundraising. In May, when I had     	     officially survived the school year, he surprised me with a trip to Europe to 	     cheer me up.</p>
           <h4>Some things you should know about John Minnis:</h4>
@@ -54,17 +56,17 @@
           <a name="trip"></a>
           <h2>The Trip</h2>
           <h4>Our adventure was divided into three phases:</h4>
-          <p><b>Phase 1: Ireland</b></p>
+          <p style=text-align:center;><b>Phase 1: Ireland</b></p>
           <figure>
             <img src="/Users/Grace/Desktop/lc101/html-me-something/images/dublin.jpg" 		     alt=Dad discovering his true self in Dublin, Ireland.>
             <figcaption>Dad discovering his true self in Dublin, Ireland.</figcaption>
           </figure>
-          <p><b>Phase 2: Scotland</b></p>
+          <p style=text-align:center;><b>Phase 2: Scotland</b></p>
           <figure>
             <img src="/Users/Grace/Desktop/lc101/html-me-something/images/faceswap.jpg" 	     alt=Dad and me in Scotland.>
             <figcaption>Dad and me in Scotland.</figcaption>
           </figure>
-          <p><b>Phase 3: London</b></p>
+          <p style=text-align:center;><b>Phase 3: London</b></p>
           <figure>
             <img src="/Users/Grace/Desktop/lc101/html-me-something/images/london.jpg" 		     alt=Dad and me on the London Bridge.>
             <figcaption>Dad and me on the London Bridge.</figcaption>
