modified index.html to test image location

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </figure>
           <p>Margaret &amp Dugie showed us around, made us tea, and showed us pictures of my 	     great-great-great grandmother Agnes Pate.</p>
           <figure>
-            <img src="/Users/Grace/Desktop/lc101/html-me-something/images/agnes.jpg" 		     alt=Agnes Pate with some of her cats>
+            <img src="https://github.com/gracengale/html-me-something/blob/master/images/agnes.jpg?raw=true" 		     alt=Agnes Pate with some of her cats>
             <figcaption>Agnes Pate with some of her cats</figcaption>
           </figure>
           <p>Agnes had 16 cats that were all named after tennis players. They told us stories 	     that had circled the locals about our family and told us where to find their 	     graves.</p>
